--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -108,7 +108,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Inconsolata
+    family: JetBrains Mono 
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -279,7 +279,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+# background_opacity: 1.0
 
 # Mouse bindings
 #
