changed ghostty theme
changed to use the internal solarized themes. i'm really wishing there
was a way to use a different theme in some reaosnable manner for remote
hosts.

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,8 +1,7 @@
-theme = dark:rose-pine-moon,light:rose-pine-dawn
+theme = dark:Builtin Solarized Dark,light:Builtin Solarized Light
 font-family = "JetBrainsMono Nerd Font Mono"
 
 window-height = 75
 window-width = 220
 window-theme = system
-
 macos-titlebar-style = tabs
