--- a/bat/config
+++ b/bat/config
@@ -4,8 +4,9 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
---theme="Solarized"
+# --theme="Solarized"
 # --theme="Solarized (dark)"
+--theme="Catppuccin Latte"
 
 --style=plain
 # Enable this to use italic text on the terminal. This is not supported on all
