--- a/ghostty/config
+++ b/ghostty/config
@@ -4,5 +4,5 @@ font-family = "JetBrainsMono Nerd Font Mono"
 window-height = 75
 window-width = 220
 window-theme = system
-macos-titlebar-style = tabs 
+macos-titlebar-style = transparent 
 shell-integration = zsh
