--- a/ghostty/config
+++ b/ghostty/config
@@ -36,3 +36,4 @@ shell-integration-features = no-cursor
 # cursor-style = "block"
 # cursor-style-blink = true
 # custom-shader = "shaders/cursor_frozen.glsl"
+keybind = shift+enter=text:\x1b\r
