--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,6 @@
-theme = dark:"Catppuccin Mocha",light:"Catppuccin Latte"
+# theme = dark:"Catppuccin Mocha",light:"Catppuccin Latte"
+# theme = dark:"Builtin Solarized Dark",light:"Builtin Solarized Light"
+theme = "Builtin Solarized Dark"
 font-family = "JetBrainsMono Nerd Font Mono"
 
 window-height = 75
